--- a/QLNS/Views/SELLING_BOOK_WINDOW.xaml
+++ b/QLNS/Views/SELLING_BOOK_WINDOW.xaml
@@ -7,7 +7,7 @@
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
      
-        Title="Hóa Đơn Bán Sách" Height="646.438" Width="1058.845" Icon="pack://siteoforigin:,,,/Resources/icons8_Booking.ico" >
+        Title="Hóa Đơn Bán Sách" Height="646.438" Width="1058.845" Icon="pack://siteoforigin:,,,/Resources/icons8_Booking.ico" Loaded="Window_Loaded" >
     <Window.DataContext>
         <viewmodels:SellBookViewModel></viewmodels:SellBookViewModel>
     </Window.DataContext>
@@ -41,10 +41,12 @@
                                 <TextBox x:Name="TxtMHD"  HorizontalAlignment="Left" Height="23" Margin="93,5,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="202" TextChanged="TextBox_TextChanged"/>
                                 <ComboBox ItemsSource="{Binding Path = ListClientsToSell,UpdateSourceTrigger=PropertyChanged}" 
                                           DisplayMemberPath="Name"
+                                          x:Name="cbClient"
+                                          IsEnabled="{Binding checkCb ,UpdateSourceTrigger=PropertyChanged}"
                                           SelectedItem="{Binding SelectedClient ,UpdateSourceTrigger=PropertyChanged}"
                                           HorizontalAlignment="Left"
                                           Height="23" Margin="93,31,0,0"  
-                                          VerticalAlignment="Top" Width="202"/>
+                                          VerticalAlignment="Top" Width="202" />
                                 <ComboBox x:Name="cbBook" ItemsSource="{Binding Path = ListBooksToSell ,UpdateSourceTrigger=PropertyChanged}" 
                                           DisplayMemberPath="Name"
                                           SelectedItem="{Binding SelectedBook ,UpdateSourceTrigger=PropertyChanged}"
@@ -111,7 +113,7 @@
                     <ListView  ItemsSource="{Binding ListBooksInSell, UpdateSourceTrigger=PropertyChanged}" 
                                SelectedItem="{Binding SelectedSellBook}"
                                
-                               x:Name="ListBook" Margin="5"
+                               x:Name="ListBook" Margin="10,10,0,0"
                                 xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="SelectionChanged">
@@ -147,10 +149,10 @@
                 </Grid>
 
             </GroupBox>
-            <TextBox x:Name="TextBill" Text="{Binding BillMoney , UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right" Margin="0,0,25,47" TextWrapping="Wrap" Width="156" RenderTransformOrigin="-2.262,-0.587" IsReadOnly="True" Height="23" VerticalAlignment="Bottom" />
-            <Label Content="Tổng Bill " HorizontalAlignment="Right" Margin="0,0,186,32" Width="81" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" Height="38" VerticalAlignment="Bottom"/>
             <Button x:Name="HoanTatButton" Content="Hoàn tất" HorizontalAlignment="Right" Margin="0,0,25,10" Width="92" RenderTransformOrigin="2.073,3.131" Click="HoanTatButton_Click" Height="22" VerticalAlignment="Bottom"/>
-
+            <TextBox x:Name="TextBill" Text="{Binding BillMoney , UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right" Margin="0,0,25,47" TextWrapping="Wrap" Width="156" RenderTransformOrigin="-2.262,-0.587" IsReadOnly="True" Height="23" VerticalAlignment="Bottom" TextChanged="TextBill_TextChanged" />
+            <Label Content="Tổng Bill " HorizontalAlignment="Right" Margin="0,0,186,32" Width="81" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" Height="38" VerticalAlignment="Bottom"/>
+            
         </Grid>
     </Grid>
 
